sass precompile error issues

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1741,8 +1741,8 @@ a .offer-box:last-child{
 .btn-brand-campaign-view{
   @extend .br-btn-primary;
   padding: 5px 10px;
-  margin-left: 1%;
-  width: 18%;
+  margin-left: 15px;
+  width: 13%;
   @media (max-width: 767px) {
     width: 100%;
   }
