css precompile issues find out process

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -1023,9 +1023,9 @@ only screen and (max-width: 560px) {
     }
 }
 
-@media (max-width:981px) and (min-width:768px) {
-    .campaign-create-wrapper .new-campaign-content input.start_time,
-    .campaign-create-wrapper .new-campaign-content input.end_time{
-        margin-left: 39px;
-    }
-}​
+/*@media (max-width:981px) and (min-width:768px) {*/
+    /*.campaign-create-wrapper .new-campaign-content input.start_time,*/
+    /*.campaign-create-wrapper .new-campaign-content input.end_time{*/
+        /*margin-left: 39px;*/
+    /*}*/
+/*}​*/
