Brand > Campaign: Drop down list responsive design

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1679,6 +1679,10 @@ a .offer-box:last-child{
   @extend  .br-btn-primary;
   margin: 25px 5px 5px 5px;
   padding: 5px 36px;
+
+  @media (max-width: 768px){
+    width: 100%;
+  }
 }
 
 .btn-inf-payment-download {
