--- a/app/views/campaigns/brand_campaign.html.erb
+++ b/app/views/campaigns/brand_campaign.html.erb
@@ -21,7 +21,7 @@
     <button class="dropdown-toggle btn btn-download-campaign" data-toggle="dropdown">
       DOWNLOAD REPORT &nbsp;<span class="caret"></span>
     </button>
-    <ul class="dropdown-menu" id="export_campaigns">
+    <ul class="dropdown-menu" id="export_brand_campaigns">
       <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
       <li data-format="xls" class="report-generate"><a href="#">to Excel</a></li>
       <li data-format="csv" class="report-generate"><a href="#">to CSV</a></li>
