--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -959,13 +959,24 @@ only screen and (max-width: 560px) {
 }
 
 #export_campaigns {
-    width: 215px;
+    width: 100%;
     margin-left: 5%;
 }
 
+#export_brand_campaigns {
+    width: 215px;
+    left: auto;
+    right: 0;
+}
+
 @media
-only screen and (max-width: 560px) {
+only screen and (max-width: 768px) {
     #export_campaigns {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    #export_brand_campaigns {
         width: 100%;
         margin-left: 0;
     }
