--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -70,7 +70,7 @@
 
           <div class="dropdown influencer-withdraw-container">
             <button class="dropdown-toggle btn-inf-payment-download" data-toggle="dropdown">
-              DOWNLOAD INVOICE</button>
+              DOWNLOAD INVOICE&nbsp;<span class="caret"></span></button>
             <ul class="dropdown-menu influencer-payment-dropdown" id="export_campaigns">
               <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
               <li data-format="xls" class="report-generate"><a href="#">to Excel</a></li>
