--- a/app/views/payments/brand_index.html.erb
+++ b/app/views/payments/brand_index.html.erb
@@ -5,7 +5,7 @@
 <div class="payment-div ">
   <div class="payment-button-set dropdown">
     <button class="dropdown-toggle btn-brand-payment-down-invoice" data-toggle="dropdown">
-      DOWNLOAD INVOICE</button>
+      DOWNLOAD INVOICE&nbsp;<span class="caret"></span></button>
     <ul class="dropdown-menu pull-right brand-payment-dropdown" id="export_campaigns">
       <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
       <li data-format="xls" class="report-generate"><a href="#">to Excel</a></li>
