--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -272,27 +272,22 @@
                 if (this.value == 0) {
                     $('#post_cost').val(costs[social_account_index][0]);
                     showHide(this.value);
-                    hideStartEndTime();
                 }
                 else if (this.value == 1) {
                     $('#post_cost').val( costs[social_account_index][1] );
                     showHide(this.value);
-                    showStartEndTime();
                 }
                 else if (this.value == 2) {
                     $('#post_cost').val(costs[social_account_index][2]);
                     showHide(this.value);
-                    showStartEndTime();
                 }
                 else if (this.value == 3) {
                     $('#post_cost').val(costs[social_account_index][3]);
                     showHide(this.value);
-                    hideStartEndTime();
                 }
                 else if (this.value == 4) {
                     $('#post_cost').val(costs[social_account_index][4]);
                     showHide(this.value);
-                    hideStartEndTime();
                 }
             }
 
@@ -318,6 +313,12 @@
 
             $(base_id_text + show_item).show();
             makeRequired(show_item);
+
+            if( show_item == 1 || show_item == 2){
+                showStartEndTime();
+            }else{
+                hideStartEndTime();
+            }
         }
 
 //       show start and end time
