--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -345,7 +345,7 @@
     }
 
     #inbox, #stared_inbox {
-        border: 1px solid #ddd;
+        border: 1px solid #D9D9D9;
         margin-bottom: 20px;
     }
 
@@ -404,9 +404,10 @@
 }
 
 .offer-message-down-arrow {
-    padding-right: 10px;
+    padding-left: 10px;
     color: #333;
     font-size: 16px;
+    vertical-align: text-bottom;
 }
 
 
