--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -148,6 +148,7 @@
           </div>
       <% end %>
 
+      <%= render partial: 'shared/guideline_modal'%>
 </div>
 
       <%= f.button 'UPDATE', class: 'btn-profile-page-update' %>
@@ -192,6 +193,11 @@
 
               // bind parsley
               $('#edit_user').parsley();
+          });
+
+//          help modal close
+          $(document).on('hidden.bs.modal', '.modal', function () {
+              $('.modal:visible').length && $(document.body).addClass('modal-open');
           });
 
       });
