make profile image upload btn border radius 0

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1777,3 +1777,7 @@ a .offer-box:last-child{
 .set-fb-activity-table .media-heading {
   margin-bottom: -5px;
 }
+
+.btn-info{
+  border-radius: 0;
+}
