--- a/app/assets/stylesheets/profile-image-upload.css
+++ b/app/assets/stylesheets/profile-image-upload.css
@@ -14,9 +14,11 @@
 }
 
 .profile-image-modal-header .close {
-    color: #aaaaaa;
+    color: #d9d9d9;
     margin-top: -18px;
-    font-size: 3em;
+    font-size: 3.4em;
+    font-weight: 100;
+    opacity: 1.5;
 }
 
 .set-facebook-activity .close {
