change influencer search result page title

--- a/app/views/influencers/search.html.erb
+++ b/app/views/influencers/search.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag 'offers.css', media: 'all' %>
+<% title 'Search result' %>
 
 <div class="influencer-search-result-box">
   <% @campaigns.each do |campaign| %>
