--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -31,9 +31,9 @@
 
       <div class="col-md-12 campaign-form-input">
         <div class="">
-          <ul class="nav nav-tabs social-account-nav-tabs"></ul>
+          <ul class="nav nav-tabs new-campaign-nav-tabs"></ul>
 
-          <div class="tab-content social-account-tab-content new-campaign-content">
+          <div class="tab-content new-campaign-tab-content new-campaign-content">
             <div id="fb_bhanu" class="tab-pane fade in active">
 
               <div id="costs" data-costs="<%= @costs %>"></div>
