show selected facebook page on new campaign page

--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -122,7 +122,7 @@
 
     $(function(){
         $('.influencer-social-account-tab').click(function(){
-            var offerSendBtn = $('a.btn-send-offer-request');
+            var offerSendBtn = $('a.btn-brand-send-campaign-request');
             var baseOfferUrl = offerSendBtn.data('href');
             console.log('current profile base url is ' + baseOfferUrl);
 
