--- a/app/assets/stylesheets/profile-image-upload.css
+++ b/app/assets/stylesheets/profile-image-upload.css
@@ -22,7 +22,8 @@
 }
 
 .set-facebook-activity .close {
-    margin-top: -45px;
+    margin-top: -60px;
+    margin-right: -30px;
 }
 
 @media (max-width: 767px) {
