--- a/app/views/shared/_sign_in_modal.html.erb
+++ b/app/views/shared/_sign_in_modal.html.erb
@@ -5,8 +5,8 @@
   <div class="modal-dialog modal-md modal-dialog-sign-in">
     <div class="modal-content">
       <div class="modal-header">
-        <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button">
-          <i class="fa fa-times"></i>
+        <button area-label="Close" class="close sign-in-close first_close" data-dismiss="modal" tyle="button">
+          &times;
         </button>
         <h3 class="modal-title">Sign In</h3>
       </div>
