--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -1062,3 +1062,9 @@ only screen and (max-width: 768px) {
 .performance_table .btn:hover, .performance_table .btn:focus {
     color: #00b6e2;
 }
+
+.payment-label {
+    font-weight: 500;
+    width: 200px;
+    text-align: right;
+}
