--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -49,14 +49,14 @@
   </div>
 
   <p class="payment-information">
-    <span class="payment-label">Campaign Name :</span> <%= @campaign.name %><br/>
-    <span class="payment-label">Type of Post :</span> <%= @campaign.post_type.humanize %><br/>
-    <span class="payment-label">Start Date :</span> <%= @campaign.start_date.strftime('%d-%m-%Y') %><br/>
-    <span class="payment-label">End Date :</span> <%= @campaign.end_date && @campaign.end_date.strftime('%d-%m-%Y') %><br/>
-    <span class="payment-label">Payment :</span> <%= @campaign.cost %> INR<br/>
+    <div class="payment-label">Campaign Name </div> <%= @campaign.name %><br/>
+    <div class="payment-label">Type of Post </div> <%= @campaign.post_type.humanize %><br/>
+    <div class="payment-label">Start Date </div> <%= @campaign.start_date.strftime('%d-%m-%Y') %><br/>
+    <div class="payment-label">End Date </div> <%= @campaign.end_date && @campaign.end_date.strftime('%d-%m-%Y') %><br/>
+    <div class="payment-label">Payment </div> <%= @campaign.cost %> INR<br/>
     <br/>
-    <span class="payment-label">Campaign Heading :</span> <%= @campaign.headline %><br/>
-    <span class="payment-label">Campaign Description :</span> <%= @campaign.text %>
+    <div class="payment-label">Campaign Heading :</div> <%= @campaign.headline %><br/>
+    <div class="payment-label">Campaign Description :</div> <%= @campaign.text %>
   </p>
 
   <form method="post" action="https://test.ccavenue.com/transaction/transaction.do?command=initiateTransaction">
